--- a/drugie_spotkanie/http1/package.json
+++ b/drugie_spotkanie/http1/package.json
@@ -2,7 +2,7 @@
   "name": "http1",
   "version": "1.0.0",
   "description": "Podstawowe dane http",
-  "main": "index.ts",
+  "main": "ciastkarnia.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
